Update pyproject.toml to include optional dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ build-backend = "setuptools.build_meta"
 name = "mazes"
 version = "0.0.1"
 
+[project.optional-dependencies]
+dev = [
+    "pytest ~=7.4.0",
+]
+
 [tool.pytest.ini_options]
 addopts = [
     "--import-mode=importlib",
 ]
-pythonpath = "src"
