--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "mazes"
 version = "0.0.1"
+requires-python = ">=3.11"
 
 dependencies = [
 ]
@@ -13,6 +14,9 @@ dependencies = [
 dev = [
     "pytest ~=7.4.0",
 ]
+
+[project.scripts]
+maze = "mazes.cli:maze_cli"
 
 [tool.pytest.ini_options]
 addopts = [
