Don't use pytest importlib because you cannot import test utility modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,4 @@ dev = [
 maze = "mazes.cli:maze_cli"
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+pythonpath = "tests"
