--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ maze = "mazes.cli:maze_cli"
 
 [tool.pytest.ini_options]
 pythonpath = "tests"
+
+[tool.setuptools.package-data]
+"mazes" = ["py.typed"]
