--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.0.1"
 requires-python = ">=3.11"
 
 dependencies = [
+    "Pillow ~=10.0.0",
 ]
 
 [project.optional-dependencies]
@@ -15,6 +16,7 @@ dev = [
     "pytest ~=7.4.0",
     "mypy ~=1.5.0",
     "black ~=23.7.0",
+    "types-Pillow ~=10.0.0",
 ]
 
 [project.scripts]
