--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dev = [
 ]
 
 [project.scripts]
-maze = "mazes.cli:maze_cli"
+maze = "mazes.command_line:main"
 
 [tool.pytest.ini_options]
 pythonpath = "tests"
