--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubnuntu-latest]
+        os: [macos-latest, ubnuntu-latest, windows-latest]
         python-version: ['3.11']
 
     steps:
