--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.0.1"
 requires-python = ">=3.11"
 
 dependencies = [
+    "typing_extensions ~=4.7.0",
     "Pillow ~=10.0.0",
 ]
 
@@ -18,6 +19,7 @@ dev = [
     "black ~=23.7.0",
     "types-Pillow ~=10.0.0",
     "tox ~= 4.11.0",
+    "isort ~= 5.12.0",
 ]
 
 [project.scripts]
