Fix flake8 errors and add flake8 support to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 env_list =
-    mypy, py311
+    mypy, flake8, py311
 minversion = 4.11.1
 
 [gh-actions]
@@ -19,3 +19,8 @@ commands =
 description = run mypy type checks
 commands =
     mypy {posargs:src tests}
+
+[testenv:flake8]
+description = run flake8 checks
+commands =
+    flake8 {posargs:src tests}
