--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev = [
     "types-Pillow ~=10.0.0",
     "tox ~= 4.11.0",
     "isort ~= 5.12.0",
+    "flake8 ~= 6.1.0",
 ]
 
 [project.scripts]
