--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ minversion = 4.11.1
 
 [gh-actions]
 python =
-    3.11: py311, mypy
+    3.11: py311, mypy, flake8
 
 [testenv]
 description = run the tests with pytest
