--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ version = "0.0.1"
 requires-python = ">=3.11"
 
 dependencies = [
-    "typing_extensions ~=4.7.0",
-    "Pillow ~=10.0.0",
+    "typing_extensions ~= 4.7.0",
+    "Pillow ~= 10.0.0",
+    "pygame ~= 2.5.0",
 ]
 
 [project.optional-dependencies]
@@ -26,6 +27,7 @@ dev = [
 
 [project.scripts]
 maze = "mazes.command_line:main"
+maze-game = "mazes.game.game_loop:main"
 
 [tool.pytest.ini_options]
 pythonpath = "tests"
