--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dev = [
 
 [project.scripts]
 maze = "mazes.command_line:main"
-maze-game = "mazes.game.game_loop:main"
+maze-game = "mazes.game.command_line:main"
 
 [tool.pytest.ini_options]
 pythonpath = "tests"
