--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 env_list =
-    mypy, flake8, py311
+    mypy, flake8, py311, py312
 minversion = 4.11.1
 
 [gh]
 python =
     3.11: py311, mypy, flake8
+    3.12: py312
 
 [testenv]
 description = run the tests with pytest
